--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,20 +12,21 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/9fc6410222.js" crossorigin="anonymous"></script>
-  <link rel="icon" href="lakshmi icon.png" type="image/png" />
-  <script src="script.js"></script>
 </head>
 
 <body>
   <nav>
-    <div class="left">
-      <a href="#">Lakshmi Technical Institute</a>
+    <div class="left"> 
+      <a href="#" class="logo-name">
+        <img src="lakshmi icon.png" alt="Lakshmi Logo" width="24" height="24" />
+        Lakshmi Technical Institute
+      </a>
     </div>
     <div class="right">
       <a href="tel:+918973120153"><i class="fa-solid fa-phone"></i> Call</a>
       <a href="https://maps.app.goo.gl/916VzKpv5NwJgWVp8" target="_blank"><i class="fa-solid fa-location-dot"></i> Location</a>
       <a href="https://wa.me/918973120153" target="_blank"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
-      <button id="darkModeToggle" aria-label="Toggle dark mode" title="Toggle Dark Mode"><i class="fa-solid fa-moon"></i></button>
+      
     </div>
   </nav>
 
@@ -42,7 +44,7 @@
   <section id="about" class="info-section">
     <h2>About Us</h2>
     <p>
-      Lakshmi Technical Institute is Madurai’s trusted centre for Typewriting, Shorthand, Computer Education, and Tally. For 25+ years, we've helped students build careers with practical, job-ready skills. Our disciplined coaching, government exam prep, and expert faculty make us a top choice.
+      Lakshmi Technical Institute is Madurai’s trusted centre for Typewriting, Shorthand, Computer Education, and Tally.
     </p>
     <ul>
       <li><i class="fa-solid fa-circle-check"></i> 25+ years of experience</li>
@@ -84,7 +86,7 @@
       <div class="checkbox-group">
         <label><input type="checkbox" name="course" value="Typewriting" /> Typewriting (English & Tamil)</label>
         <label><input type="checkbox" name="course" value="Shorthand" /> Shorthand (English & Tamil)</label>
-        <label><input type="checkbox" name="course" value="COA" /> COA - Computer on Office Automation</label>
+        <label><input type="checkbox" name="course" value="COA" /> COA</label>
         <label><input type="checkbox" name="course" value="Computer Basics" /> Computer Basics</label>
         <label><input type="checkbox" name="course" value="Tally with GST" /> Tally with GST</label>
       </div>
@@ -102,13 +104,13 @@
     <p><i class="fa-solid fa-location-dot"></i> 19-B, Rajangam Street, Anna Main Street, Bethaniyapuram, Madurai – 625016</p>
     <p><i class="fa-solid fa-envelope"></i> <a href="mailto:lakshmitechinstitute97@gmail.com">lakshmitechinstitute97@gmail.com</a></p>
     <p><i class="fa-brands fa-whatsapp"></i> <a href="https://wa.me/918973120153" target="_blank">Message on WhatsApp</a></p>
-    <p><i class="fa-solid fa-map-location-dot"></i> <a href="https://maps.app.goo.gl/916VzKpv5NwJgWVp8" target="_blank">View on Map</a></p>
     <p>&copy; 2025 Lakshmi Technical Institute. All rights reserved.</p>
   </footer>
 
-  <button id="enrollBtn" title="Enroll Now"><i class="fa-solid fa-pen-to-square"></i> Enroll Now</button>
+  <button id="enrollBtn" title="Enroll Now" type="button">
+    <i class="fa-solid fa-pen-to-square"></i> Enroll Now
+  </button>
 
   <script src="script.js"></script>
 </body>
-
 </html>
