--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
     </ul>
   </section>
 
+  <section id="gallery" class="section">
+    <h2 class="raleway">Our Gallery</h2>
+    <div class="gallery-grid">
+      <img src="front_view.jpg" alt="Front View">
+      <img src="classroom.jpg" alt="Typewriting Room">
+      <img src="students_1.jpg" alt="Students Practicing">
+      <img src="students_2.jpg" alt="Students Practicing">
+      <img src="award-ceremony.jpg" alt="Award Ceremony">
+    </div>
+  </section>
+
   <section id="timing" class="info-section">
     <h2>Class Timings</h2>
     <p><strong>Morning:</strong> 6:00 AM – 12:00 PM</p>
