--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
       <img src="students_1.jpg" alt="Students Practicing">
       <img src="students_2.jpg" alt="Students Practicing">
       <img src="award-ceremony.jpg" alt="Award Ceremony">
+      <img src="state_first.jpg" alt="State First">
     </div>
   </section>
 
