--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     </ul>
   </section>
 
-  <section id="gallery" class="section">
+  <section id="gallery" class="gallery-section">
     <h2 class="raleway">Our Gallery</h2>
-    <div class="gallery-grid">
+    <div class="gallery-grid" id="gallery-grid">
       <img src="front_view.jpg" alt="Front View">
       <img src="classroom.jpg" alt="Typewriting Room">
       <img src="students_1.jpg" alt="Students Practicing">
